objects/Dealer_Scoring__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Value__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dealer Scoring</label>
</CustomObject>